# linux-steam-integration

./: README.md  TECHNICAL.md  TEST_LIST  meson.build  meson_options.txt  mkgobuildy.sh  mkrelease.sh
data/: meson.build
snapd/: meson.build
src/common/: common.h  files.c  files.h  log.c  log.h  vdf.c  vdf.h
src/frontend/: main-window.c  main-window.h  main.c  meson.build
src/intercept/: main.c
src/lsi/: lsi.c  lsi.h
src/redirect/: main.c  private.h  profile.c  profile.h  redirect.h  unity.c
src/redirect/profiles/: ark.c  project_highrise.c
src/shim/: lsi-exec.c  main.c  meson.build  shim.c  shim.h
